# hikidashi-batch

./: .env.example  .gitignore  README.md  batch_create_embeddings.py  check_subscription_consistency.py  debug_memo_count.py  memo_to_chunk.py  prepare_local_embedding.sh  pyproject.toml  test_embeddings.py  trello_past_tasks.py  utils.py
category_nesting_migrasion/: migrate_categories.py  update_category_user_ids.py  verify_categories.py
misc/: batch_mv_data_to_new_db.py  sync_stripe_subscription.py
